--- a/src/app/Components/products/products.component.html
+++ b/src/app/Components/products/products.component.html
@@ -10,7 +10,7 @@
                         <h6 class="card-title" style="height:45px">{{product.name}}</h6>
                         <p class="card-text mb-4">EGP {{product.price | number:'1.2-2'}}</p>
                         <div class="d-flex justify-content-around" id="buttons-group">
-                            <a href="/product/{{product.id}}" class="btn btn-primary deta-btn mb-2">Details</a>
+                            <a routerLink="/product/{{product.id}}" class="btn btn-primary deta-btn mb-2">Details</a>
                             <button *ngIf="product.stock>1" data-target="#exampleModal" data-toggle="modal" (click)="add(product.id)" class="btn btn-primary prod-btn mb-2">Add to Cart</button>
                             <button *ngIf="product.stock==0" data-target="#exampleModal" data-toggle="modal" (click)="add(product.id)" class="btn prod-btn mb-2 danger" disabled>OUT OF STOCK</button>
                         </div>
@@ -24,7 +24,7 @@
                         <h6 class="card-title" style="height:45px">{{offer['product info'].name}}</h6>
                         <p class="card-text mb-4">EGP {{offer.oldPrice - (offer.oldPrice * (offer.discount/100)) | number:'1.2-2'}}<span class="mx-1" style="text-decoration:line-through; font-size: small; color: #7D7DA5;">EGP{{offer.oldPrice}}.00</span></p>
                         <div class="d-flex justify-content-around" id="buttons-group">
-                            <a href="/product/{{offer['product info'].id}}" class="btn btn-primary deta-btn mb-2">Details</a>
+                            <a routerLink="/product/{{offer['product info'].id}}" class="btn btn-primary deta-btn mb-2">Details</a>
                             <button *ngIf="offer['product info'].stock>1" data-target="#exampleModal" data-toggle="modal" (click)="add(offer['product info'].id)" class="btn btn-primary prod-btn mb-2">Add to Cart</button>
                             <button *ngIf="offer['product info'].stock==0" data-target="#exampleModal" data-toggle="modal" (click)="add(offer['product info'].id)" class="btn btn-primary prod-btn mb-2 danger" disabled>OUT OF STOCK</button>
                         </div>
